--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,33 @@ div.scrollmenu :hover {
 }
 
 .focused {
- background-color: #777;
+  border-radius: 4px;
+  background-color: #eaab00; /* gold */
+  /* Single pixel data uri image http://jsfiddle.net/LPxrT/ 
+  /* background-image: gold, gold, white */
+  background-image: url('data:image/gif;base64,R0lGODlhAQABAPAAAOqrAP///yH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=='),  url('data:image/gif;base64,R0lGODlhAQABAPAAAOqrAP///yH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=='),
+  linear-gradient(to top,rgba(0,0,0,1), rgba(0,0,0,0));
+  background-repeat: no-repeat;
+  background-size: 0 2px, 0 100%, 0% 2px;
+  background-position: top center, top center, bottom center;
+  animation: drawBorderFromCenter 1.4s;
+}
+
+@keyframes drawBorderFromCenter {
+  0% {
+    background-size: 0 2px, 0 0, 100% 100%;
+  }
+  20% {
+    background-size: 100% 2px, 100% 0, 100% 100%;
+  }
+  40%
+  {
+    background-size: 100% 2px, 100% 80%, 100% 100%;
+  }
+  99%
+  {
+    background-size: 100% 2px, 100% 80%, 0 2px;
+  }
 }
 
 .streamCard img {vertical-align: middle;}
@@ -71,7 +97,8 @@ div.scrollmenu :hover {
   background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
   color: #f1f1f1;
   width: 100%;
-  padding: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .up {
@@ -84,4 +111,14 @@ div.scrollmenu :hover {
   overflow: unset;
   left: 80px;
   position: fixed;
+}
+.text {
+  width: 720px;
+  z-index: 2;
+}
+
+@keyframes floatLeft {
+  to {
+    transform: translateX(-100%);
+  }
 }
