--- a/src/components/video/MainStream.css
+++ b/src/components/video/MainStream.css
@@ -23,9 +23,10 @@
   width: 900px;
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 #avatarImg {
-  width: 120px;
-  height: 120px;
+  width: 200px;
+  height: 200px;
   margin-right: 20px;
 }
