:art: Add some ui changes
Added some simple fixes on the texts.
Fixed the wrong scrolling behavior.

--- a/src/components/video/MainStream.css
+++ b/src/components/video/MainStream.css
@@ -23,10 +23,11 @@
   width: 900px;
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
 #avatarImg {
-  width: 120px;
-  height: 120px;
+  width: 200px;
+  height: 200px;
   margin-right: 20px;
 }
