:fire: Fix style issues + update `twitch-get-stream` dependency

--- a/src/components/nav/Navigation.css
+++ b/src/components/nav/Navigation.css
@@ -5,11 +5,11 @@
 }
 
 nav {
-  display:flex;
-  justify-content:center;
-  align-items:center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 1080px;
   width: 80px;
-  background: linear-gradient(to right, rgba(0,0,0,1), rgba(0,0,0,1), rgba(0,0,0,1), rgba(0,0,0,1), rgba(0,0,0,1), rgba(0,0,0,0.95), rgba(0,0,0,0.95), rgba(0,0,0,0.95), rgba(0,0,0,0.9), rgba(0,0,0,0));
+  background: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.95), rgba(0, 0, 0, 0.95), rgba(0, 0, 0, 0.95), rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0));
   transition: all ease-in-out .42s;
 }
