--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ div.scrollmenu :hover {
 .container {
   display: flex;
   overflow-y: hidden;
-  height: 1080px; 
+  height: 1080px;
 }
 
 .main3 {
@@ -60,11 +60,12 @@ div.scrollmenu :hover {
 
 .focused {
   border-radius: 4px;
-  background-color: #eaab00; /* gold */
+  background-color: #eaab00;
+  /* gold */
   /* Single pixel data uri image http://jsfiddle.net/LPxrT/ 
   /* background-image: gold, gold, white */
-  background-image: url('data:image/gif;base64,R0lGODlhAQABAPAAAOqrAP///yH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=='),  url('data:image/gif;base64,R0lGODlhAQABAPAAAOqrAP///yH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=='),
-  linear-gradient(to top,rgba(0,0,0,1), rgba(0,0,0,0));
+  background-image: url('data:image/gif;base64,R0lGODlhAQABAPAAAOqrAP///yH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=='), url('data:image/gif;base64,R0lGODlhAQABAPAAAOqrAP///yH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=='),
+    linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
   background-repeat: no-repeat;
   background-size: 0 2px, 0 100%, 0% 2px;
   background-position: top center, top center, bottom center;
@@ -75,26 +76,31 @@ div.scrollmenu :hover {
   0% {
     background-size: 0 2px, 0 0, 100% 100%;
   }
+
   20% {
     background-size: 100% 2px, 100% 0, 100% 100%;
   }
-  40%
-  {
+
+  40% {
     background-size: 100% 2px, 100% 80%, 100% 100%;
   }
-  99%
-  {
+
+  99% {
     background-size: 100% 2px, 100% 80%, 0 2px;
   }
 }
 
-.streamCard img {vertical-align: middle;}
+.streamCard img {
+  vertical-align: middle;
+}
 
 .streamCard h1 {
   position: absolute;
   bottom: 0;
-  background: rgb(0, 0, 0); /* Fallback color */
-  background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+  background: rgb(0, 0, 0);
+  /* Fallback color */
+  background: rgba(0, 0, 0, 0.5);
+  /* Black background with 0.5 opacity */
   color: #f1f1f1;
   width: 100%;
   padding-top: 20px;
@@ -112,6 +118,7 @@ div.scrollmenu :hover {
   left: 80px;
   position: fixed;
 }
+
 .text {
   width: 720px;
   z-index: 2;
